--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-2.5.4:	Better manual. Clean up of language files. Settings for additional attributes and default group. Manually assigned groups for fe-users won't be overwritten.
+2.5.6:	Storage folder for individual groups. Redirect option. Italian language pack. Shibboleth plugin seperated from felogin functionality.
+2.5.5:	Better manual. Clean up of language files. Settings for additional attributes and default group. Manually assigned groups for fe-users won't be overwritten.
 2.5.3:	$_SERVER['AUTH_TYPE'] in capital letters is accepted.
 2.5.2:	Access of methods changed from private to protected. 
 2.5.1:	Small bugfix in onlyShibbolethFunc. 
@@ -9,7 +10,7 @@
 2.4.1:	TYPO3_cliMode bugfix. Cli users should not be authenticated with shibboleth auth. 
 2.4.0:	Only Shibboleth Backend Configuration: Enable backend authentication against Shibboleth only. 
 2.3.0:	Security update: forceSSL configuration added. 
-2.2.1:	Small change in getFEUserGroups hook .
+2.2.1:	Small change in getFEUserGroups hook.
 2.2.0:	New hook for getFEUserGroups. 
 2.1.0:	fe_user auto import bugfixes. 
 2.0.0:	The first stable version.
