--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+2.5.7:  Bugfix: Set additional attributes at import. Name of config variable corrected in ext_conf_template.txt.
 2.5.6:	Storage folder for individual groups. Redirect option. Italian language pack. Shibboleth plugin seperated from felogin functionality.
 2.5.5:	Better manual. Clean up of language files. Settings for additional attributes and default group. Manually assigned groups for fe-users won't be overwritten.
 2.5.3:	$_SERVER['AUTH_TYPE'] in capital letters is accepted.
